# routes/api/auth.js
@@ -8,6 +8,8 @@ var router = express.Router()
 router.post('/signInWithEmailAndPassword', auth_ctrl.signInWithEmailAndPassword)
 // 以手机号码快速登录
 router.post('/signInWithPhone', auth_ctrl.signInWithPhone)
+// 使用手机号码查询是否注册
+router.get('/createUserIsUsedByPhone', auth_ctrl.createUserIsUsedByPhone)
 // 新增用户
 router.post('/createUserWithEmailAndPassword', auth_ctrl.createUserWithEmailAndPassword)
 // 通过邮箱重置密码
